--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
   "pydantic-settings>=2.2",
   "sqlalchemy>=2.0",
   "psycopg[binary]>=3.2",
+  "alembic>=1.13",
 ]
 
 [project.optional-dependencies]
