chore(seed): agregar seed mínimo de usuarios usando pwdlib con Argon2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
   "sqlalchemy>=2.0",
   "psycopg[binary]>=3.2",
   "alembic>=1.13",
+  "pwdlib[argon2]>=0.3.0",
 ]
 
 [project.optional-dependencies]
