--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
   "psycopg[binary]>=3.2",
   "alembic>=1.13",
   "pwdlib[argon2]>=0.3.0",
+  "email-validator>=2.1.1",
 ]
 
 [project.optional-dependencies]
