--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
   "alembic>=1.13",
   "pwdlib[argon2]>=0.3.0",
   "email-validator>=2.1.1",
+  "PyJWT>=2.8.0",
 ]
 
 [project.optional-dependencies]
